--- a/实例5：使用新的输入字段描述数据/index.html
+++ b/实例5：使用新的输入字段描述数据/index.html
@@ -12,7 +12,8 @@
                     <li>
                         <!--<label> 标签的 for 属性应该等于相关元素的 id 元素，以便将它们捆绑起来-->
                         <label for="name">Name</label>
-                        <input type="text" name="name" id = "name">
+                        <input type="text" name="name" autofocus id = "name">
+                        <!--autofocus直接将光标定位在此处，如果出现多个就放在最后出现的地方-->
                     </li>
 
                     <li>
